--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
     "files.associations": {
-        "iostream": "cpp",
-        "cstdlib": "c",
-        "math.h": "c"
+        "iostream": "cpp"
     }
 }
